# azure-kubernetes-credential-loader

./: .bandit  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  aks-credential-loader  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: EXAMPLES.md  PROJECT_STRUCTURE.md
scripts/: aks_credential_loader.sh  run_tests.sh
src/: __init__.py  aks_credential_loader.py
tests/: __init__.py  conftest.py  test_aks_credential_loader.py  test_isolated.py  test_simple.py
